src/objects/ADvendio__Invoice__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__RecipientContact__c</fullName>
        <label>Debtor Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientDebitorId__c</fullName>
        <label>Debtor Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientId__c</fullName>
        <label>Debtor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientName__c</fullName>
        <label>Debtor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientNumber__c</fullName>
        <label>Debtor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecipientVATId__c</fullName>
        <label>Debtor VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReverseChargeMechanism__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is true - the VAT Type on any campaign item will be ignored, set to zero, and on the invoice pdf the Custom Label Reverse-Charge Mechanism Note is displayed.</description>
        <inlineHelpText>Please check this box to apply the Reverse-Charge Process on this Media Campaign.</inlineHelpText>
        <label>Reverse-Charge Mechanism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__SalesTaxIdNr__c</fullName>
        <label>Sales Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowThirdPartyCommission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Third Party Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <inlineHelpText>Entwurf: RG-Vorschlag welche freigegeben werden muss
Freigabe: RG-Vorschlag wurde freigegeben und kann im Renchnungslauf
Fakturiert: Rechungslauf erfolgte, aus RG-Vorschlag wurde finale Rechnung
Storno: Rechnung wurde durch neue RG-Storno aufgehoben</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__SumofAgencyCommission__c</fullName>
        <label>Sum of Agency Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountTotal__c</fullName>
        <description>This formula adds up the total amount of all items of type 1 and type 2 depending on the taxable type you have defined. The Standard is N2.</description>
        <formula>ADvendio__TaxableAmountVatType1__c + ADvendio__TaxableAmountVatType2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula adds up the total amount of all items of type 1 and type 2 depending on the taxable type you have defined. The Standard is N2.</inlineHelpText>
        <label>Taxable Amount (Total)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountVatType1__c</fullName>
        <description>This field gets calculated by an APEX script and displays the total amount of all items of type 1 depending on the taxable type you have defined in the media campaign. The Standard is N2.</description>
        <inlineHelpText>This field gets calculated by an APEX script and displays the total amount of all items of type 1 depending on the taxable type you have defined in the media campaign. The Standard is N2.</inlineHelpText>
        <label>Taxable Amount (VAT Type 1)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountVatType2__c</fullName>
        <description>This field gets calculated by an APEX script and displays the total amount of all items of type 2 depending on the taxable type you have defined in the media campaign. The Standard is N2.</description>
        <inlineHelpText>This field gets calculated by an APEX script and displays the total amount of all items of type 2 depending on the taxable type you have defined in the media campaign. The Standard is N2.</inlineHelpText>
        <label>Taxable Amount (VAT Type 2)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TermsOfPaymentDaysNet__c</fullName>
        <label>Terms of Payment Days Net</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__TermsOfPaymentText__c</fullName>
        <label>Terms of Payment Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ThirdPartyCommission__c</fullName>
        <label>Third Party Commission</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalAmountDue__c</fullName>
        <description>Total amount of all line items that is still due and should be invoiced</description>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__VATAmount1__c</fullName>
        <description>Roll-up Summary totaling the VAT for all items of type 1 except Packages.</description>
        <label>VAT Amount (Type 1)</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__VATAmount__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__VATType__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATAmount2__c</fullName>
        <description>Roll-up Summary totaling the VAT for all items of type 2 except Packages.</description>
        <label>VAT Amount (Type 2)</label>
        <summarizedField>ADvendio__InvoiceItem__c.ADvendio__VATAmount__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__VATType__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.ADvendio__ItemRecordType__c</field>
            <operation>notEqual</operation>
            <value>Packet</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if you don&apos;t want to apply any value added tax. Value gets mapped from the corresponding media campaign.</description>
        <label>VAT Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATRate1__c</fullName>
        <description>This VAT rate has been defined in your custom settings and depends on which country is buying from whom. It is automatically set by an apex script.</description>
        <label>VAT Rate % (Type 1)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__VATRate2__c</fullName>
        <description>This VAT rate has been defined in your custom settings and depends on which country is buying from whom. It is automatically set by an apex script.</description>
        <label>VAT Rate % (Type 2)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatTotal__c</fullName>
        <description>Formula to add the VAT of type 1 and type 2.</description>
        <formula>ADvendio__VATAmount1__c + ADvendio__VATAmount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to add the VAT of type 1 and type 2.</inlineHelpText>
        <label>VAT Total</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__YourReferenceNumber__c</fullName>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__eCPM__c</fullName>
        <label>eCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mediagattungs_Segement_Mix__c</fullName>
        <description>Ist wahr, wenn ein Mix aus Nonmedia und Media Mediagattungs-Segmenten vorliegt.</description>
        <formula>IF ( SomDig_Anzahl_Nonmedia_Positionen__c &gt; 0 &amp;&amp;  SomDig_Anzahl_Media_Positionen__c &gt; 0 , true, false)</formula>
        <inlineHelpText>Ist wahr, wenn ein Mix aus Nonmedia und Media Mediagattungs-Segmenten vorliegt.</inlineHelpText>
        <label>Mediagattungs-Segement Mix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Abrechnungsmonat__c</fullName>
        <description>generiert den Monat aus dem Abrechnungsdatum</description>
        <formula>CASE(MONTH( ADvendio__AccountingDate__c ),
1, &quot;Januar&quot;,
2, &quot;Februar&quot;,
3, &quot;März&quot;, 
4, &quot;April&quot;, 
5, &quot;Mai&quot;, 
6, &quot;Juni&quot;,
7, &quot;Juli&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;Oktober&quot;,
11, &quot;November&quot;,
12, &quot;Dezember&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Abrechnungsmonat</inlineHelpText>
        <label>Abrechnungsmonat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Anzahl_Media_Positionen__c</fullName>
        <description>Zeigt die Anzahl der Rechnungspositionen, die nicht das Mediagattungs-Segment NonMedia haben.</description>
        <inlineHelpText>Zeigt die Anzahl der Rechnungspositionen, die nicht das Mediagattungs-Segment NonMedia haben.</inlineHelpText>
        <label>Anzahl Media Positionen</label>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.SomDig_Mediagattungs_Segement_Name__c</field>
            <operation>notEqual</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_Anzahl_Nonmedia_Positionen__c</fullName>
        <description>Zeigt die Anzahl der Rechnungspositionen mit dem Mediagattungs-Segment NonMedia.</description>
        <inlineHelpText>Zeigt die Anzahl der Rechnungspositionen mit dem Mediagattungs-Segment NonMedia.</inlineHelpText>
        <label>Anzahl Nonmedia Positionen</label>
        <summaryFilterItems>
            <field>ADvendio__InvoiceItem__c.SomDig_Mediagattungs_Segement_Name__c</field>
            <operation>equals</operation>
            <value>NonMedia</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__InvoiceItem__c.ADvendio__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstyp__c</fullName>
        <label>Auftragstyp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_BetreuerPAM__c</fullName>
        <description>übernommen aus Mediakampagne</description>
        <formula>ADvendio__MediaCampaign__r.SomDig_BetreuerPam__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>übernommen aus Mediakampagne</inlineHelpText>
        <label>Betreuer PAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Dokumenttyp__c</fullName>
        <formula>IF(ADvendio__InvoicedAmountGross__c &gt;= 0, &quot;PI&quot;, &quot;PC&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dokumenttyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_FakturaBuchungssaetzeEnthalten__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faktura Buchungssaetze Enthalten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Kampagnenenddatum__c</fullName>
        <formula>ADvendio__MediaCampaign__r.ADvendio__Campaign_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kampagnenenddatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_Kampagnenstartdatum__c</fullName>
        <description>übernommen aus Mediakampagne</description>
        <formula>ADvendio__MediaCampaign__r.ADvendio__Campaign_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>übernommen aus Mediakampagne</inlineHelpText>
        <label>Kampagnenstartdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_MediacampaignLost__c</fullName>
        <formula>ADvendio__MediaCampaign__r.RecordType.Name =&quot;Auftrag&quot;
&amp;&amp;
 ADvendio__MediaCampaign__r.ADvendio__Propability__c =0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kampagne storniert?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Mn3__c</fullName>
        <description>Ticket 4177
MN2-Wert minus Skonto (wenn ein Skonto für die MK ausgewählt wurde) ergibt MN3</description>
        <formula>ADvendio__InvoicedAmountNet2__c * (1 -  ADvendio__Early_Payment_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN2-Wert minus Skonto (wenn ein Skonto für die MK ausgewählt wurde) ergibt MN3</inlineHelpText>
        <label>MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_MwstCheck__c</fullName>
        <description>Prüfung &quot;Mwst. befreit&quot;-Eigenschaft zwischen Rechnung und Kampagne/Debitor abweichend ist.
siehe TI 03888</description>
        <formula>IF( ADvendio__VATExempt__c !=  ADvendio__MediaCampaign__r.SomDig_VATExempt__c , 
  &apos;abweichend&apos;,
  &apos;ok&apos;
)</formula>
        <inlineHelpText>Prüfung &quot;Mwst. befreit&quot;-Eigenschaft zwischen Rechnung und Kampagne/Debitor abweichend ist.</inlineHelpText>
        <label>Mwst. Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_PDF_Preview__c</fullName>
        <description>Link zum Öffnen des PDFs: wird in Ansichten benutzt</description>
        <formula>HYPERLINK(&apos;/apex/ADvendio__PDF?invid=&apos; + Id, &apos;PDF&apos;, &apos;blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link zum Öffnen des PDFs</inlineHelpText>
        <label>PDF Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_PartnerId__c</fullName>
        <label>SomDig PartnerId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Preisliste__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preisliste</label>
        <referenceTo>ADvendio__Pricelist__c</referenceTo>
        <relationshipLabel>Rechnungen</relationshipLabel>
        <relationshipName>Rechnungen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_RG_Empfaenger_P7S1_Konzernmitgl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RG Empfänger P7S1 Konzernmitglied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Rechnungsfreigabe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mit der Checkbox wird der Status des Feldes ADvendio__Status__c auf Reviewed/Freigegeben gesetzt per Feldaktualisierung. Nur diese Rechnungen erscheinen im Rechnungslauf. Siehe KV 2271.</description>
        <inlineHelpText>Nur freigegebene Rechnungen werden im Rechnungslauf aufgeführt. Wenn eine Rechung einer Mediakampagne freigegeben, aber noch nicht fakturiert ist, kann die komplette Kampagne nicht geändert/angepasst werden</inlineHelpText>
        <label>Rechnungsfreigabe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_SapBuchungsdatumAuto__c</fullName>
        <label>Sap Datum Neu</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_SapBuchungsdatum__c</fullName>
        <description>SAP Buchungsdatum, abhängig vom Rechnungsdatum bzw. Belegdatum und im Format MM.YYYY</description>
        <formula>SomDig_SapBuchungsdatumAuto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SAP Buchungsdatum, abhängig vom Rechnungsdatum bzw. Belegdatum und im Format MM.YYYY</inlineHelpText>
        <label>SAP Buchungsdatum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Soll_Haben_Kennzeichen__c</fullName>
        <formula>IF(ADvendio__InvoicedAmountGross__c &gt;= 0, &quot;H&quot;, &quot;S&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soll/Haben Kennzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_SteuerkennzeichenAktuell__c</fullName>
        <description>Case 04358
- Temporäres Feld welches durch das Mapping BA gefüllt wird
- Quelle für das Feld SomDig_Steuerkennzeichen</description>
        <inlineHelpText>Temporäres Feld welches den Wert des Steuerkennzeichens vorhält.</inlineHelpText>
        <label>Steuerkennzeichen Aktuell</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Steuerkennzeichen__c</fullName>
        <formula>SomDig_SteuerkennzeichenAktuell__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Steuerkennzeichen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_ZahlungsbedingungenSAP__c</fullName>
        <label>Zahlungsbedingungen SAP</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>ADvendio__all</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alle_PreInvoices</fullName>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Rechnungsfreigabe__c</columns>
        <columns>ADvendio__InvoicedAmountNet2__c</columns>
        <columns>SomDig_BetreuerPAM__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Pre</value>
        </filters>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>notEqual</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__InvoicedAmountNet2__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Alle PreInvoices</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle_PreInvoices_bis_Vormonat</fullName>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Rechnungsfreigabe__c</columns>
        <columns>ADvendio__InvoicedAmountNet2__c</columns>
        <columns>SomDig_BetreuerPAM__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Pre</value>
        </filters>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>notEqual</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__AccountingDate__c</field>
            <operation>lessThan</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Alle PreInvoices bis Vormonat</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle_PreInvoices_bis_aktueller_Monat</fullName>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Rechnungsfreigabe__c</columns>
        <columns>ADvendio__InvoicedAmountNet2__c</columns>
        <columns>SomDig_BetreuerPAM__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Pre</value>
        </filters>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>notEqual</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__AccountingDate__c</field>
            <operation>lessOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Alle PreInvoices bis aktueller Monat</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle_PreInvoices_nach_Agentur</fullName>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Rechnungsfreigabe__c</columns>
        <columns>ADvendio__InvoicedAmountNet2__c</columns>
        <columns>SomDig_BetreuerPAM__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Pre</value>
        </filters>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>notEqual</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__AgencyName__c</field>
            <operation>contains</operation>
            <value>XY</value>
        </filters>
        <label>Alle PreInvoices nach Agentur</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle_PreInvoices_nach_WT</fullName>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Rechnungsfreigabe__c</columns>
        <columns>ADvendio__InvoicedAmountNet2__c</columns>
        <columns>SomDig_BetreuerPAM__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Pre</value>
        </filters>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>notEqual</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__AdvertiserName__c</field>
            <operation>contains</operation>
            <value>XY</value>
        </filters>
        <label>Alle PreInvoices nach WT</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Erstellte_Rechnungen_nach_Agentur</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__CampaignName__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>ADvendio__InvoiceType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <columns>ADvendio__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>equals</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__AgencyName__c</field>
            <operation>equals</operation>
            <value>XY</value>
        </filters>
        <label>Erstellte Rechnungen nach Agentur</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Erstellte_Rechnungen_nach_WT</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__CampaignName__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>ADvendio__InvoiceType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <columns>ADvendio__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>equals</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__AdvertiserName__c</field>
            <operation>equals</operation>
            <value>XY</value>
        </filters>
        <label>Erstellte Rechnungen nach WT</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Rechnungen_ohne_Mwst_auf_Dokument</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__CampaignName__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>ADvendio__InvoiceType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <columns>ADvendio__Status__c</columns>
        <columns>ADvendio__VATRate1__c</columns>
        <columns>ADvendio__VATAmount1__c</columns>
        <columns>ADvendio__VATRate2__c</columns>
        <columns>ADvendio__VATAmount2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>equals</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <filters>
            <field>ADvendio__VATRate1__c</field>
            <operation>equals</operation>
        </filters>
        <label>Rechnungen ohne Mwst auf Dokument</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_ProfilesSomDig_Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SomDig_ErstellteRechnungen</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AgencyName__c</columns>
        <columns>ADvendio__AdvertiserName__c</columns>
        <columns>ADvendio__RecipientName__c</columns>
        <columns>ADvendio__OrderNumber__c</columns>
        <columns>ADvendio__CampaignName__c</columns>
        <columns>SomDig_Kampagnenstartdatum__c</columns>
        <columns>SomDig_Kampagnenenddatum__c</columns>
        <columns>SomDig_Abrechnungsmonat__c</columns>
        <columns>ADvendio__InvoiceDate__c</columns>
        <columns>ADvendio__InvoiceType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SomDig_PDF_Preview__c</columns>
        <columns>ADvendio__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>equals</operation>
            <value>Invoiced,Canceled</value>
        </filters>
        <label>Erstellte Rechnungen</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Beschreibungsfeld</fullName>
        <active>true</active>
        <description>Beschreibung darf nicht geändert werden, wenn Rechnung im Fakturiert- oder Storniert-Status ist (siehe auch KV 2924)</description>
        <errorConditionFormula>ISCHANGED( ADvendio__Description__c ) 
 &amp;&amp; 
OR(
ISPICKVAL( ADvendio__Status__c , &quot;Invoiced&quot;),
ISPICKVAL( ADvendio__Status__c , &quot;Canceled&quot;))</errorConditionFormula>
        <errorMessage>Beschreibung darf nicht geändert werden, wenn Rechnung im Fakturiert- oder Storniert-Status ist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_CanceledMustNeverChanged</fullName>
        <active>true</active>
        <errorConditionFormula>isCHanged(ADvendio__Status__c) &amp;&amp; 
IsPickVal(PRIORVALUE(ADvendio__Status__c),&quot;Canceled&quot;)</errorConditionFormula>
        <errorDisplayField>ADvendio__Status__c</errorDisplayField>
        <errorMessage>Eine Rechnung im Status &quot;Storniert&quot; darf in keinen anderen Status geändert werden</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_FreigabeBlock</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(SomDig_Rechnungsfreigabe__c)
&amp;&amp;
OR(
ISPICKVAL(ADvendio__Status__c,&quot;Invoiced&quot;),
ISPICKVAL(ADvendio__Status__c,&quot;Canceled&quot;)
)</errorConditionFormula>
        <errorMessage>Entfernen der Freigabe in diesem Status nicht möglich.</errorMessage>
    </validationRules>
</CustomObject>